--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
     <title>Grist Calculator</title>
     <style>
-    #loading, #results {
-        display: none
-    }
+        #loading,
+        #results {
+            display: none
+        }
     </style>
 </head>
 
@@ -106,8 +107,19 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-6 mx-auto ">
+                <a class="float-right mt-4" href='https://ko-fi.com/S6S0WEGT' target='_blank'><img height='36'
+                        style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi4.png?v=2'
+                        border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+
+            </div>
+        </div>
     </div>
+
     </div>
+
+
 
 
 
