make labels equal width

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <form action="" id="grist-form">
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">Weight</span>
+                                <div class="input-group-prepend w-25">
+                                    <span class="input-group-text w-100">Weight(g)</span>
                                 </div>
                                 <input type="number" step="0.01" min="0" class="form-control" id="weight"
                                     placeholder="Skein weight in grams">
@@ -39,8 +39,8 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">Length</span>
+                                <div class="input-group-prepend w-25">
+                                    <span class="input-group-text w-100">Length(cm)</span>
                                 </div>
                                 <input type="number" step="0.01" min="0" class="form-control" id="length"
                                     placeholder="Skein length in cm">
@@ -48,8 +48,8 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">Wraps</span>
+                                <div class="input-group-prepend w-25">
+                                    <span class="input-group-text w-100">Wraps</span>
                                 </div>
                                 <input type="number" step="0.01" min="0" class="form-control" id="wraps"
                                     placeholder="Skein wraps">
@@ -72,32 +72,32 @@
                         <h5>Results</h5>
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">Grist(m/kg)</span>
+                                <div class="input-group-prepend w-25">
+                                    <span class="input-group-text w-100">Grist(m/kg)</span>
                                 </div>
                                 <input type="number" class="form-control" id="gristMetric">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">Grist(ypp)</span>
+                                <div class="input-group-prepend w-25">
+                                    <span class="input-group-text w-100">Grist(ypp)</span>
                                 </div>
                                 <input type="number" class="form-control" id="gristImperial">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">Class</span>
+                                <div class="input-group-prepend w-25">
+                                    <span class="input-group-text w-100">Class</span>
                                 </div>
                                 <input type="text" class="form-control" id="class">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">Length(m)</span>
+                                <div class="input-group-prepend w-25">
+                                    <span class="input-group-text w-100">Length(m)</span>
                                 </div>
                                 <input type="number" class="form-control" id="totalLength">
                             </div>
