--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="styles.css">
     <title>Grist Calculator</title>
     <style>
         #loading,
@@ -19,7 +19,7 @@
     </style>
 </head>
 
-<body class="bg-light">
+<body class="bg">
 
     <div class="container">
         <div class="row">
