add reset button

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                                 </div>
                                 <input type="number" class="form-control" id="totalLength">
                             </div>
-
                         </div>
+                        <button class="btn btn-light float-right" id="reset-button">Reset</button>
                     </div>
                 </div>
             </div>
