add google verification meta tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- css -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Google verification -->
+    <meta name="google-site-verification" content="bseRgW51DBq-tWcYhBU9IjtYUY6eKz6QGaxlrSiGfqw" />
     <title>Grist Calculator</title>
     <style>
         #loading,
@@ -52,7 +55,7 @@
                                     <span class="input-group-text w-100">Wraps</span>
                                 </div>
                                 <input type="number" step="0.01" min="0" class="form-control" id="wraps"
-                                    placeholder="Skein wraps">
+                                    placeholder="No. of strands in skein">
                             </div>
                         </div>
                         <div class="form-group">
