change length to inches

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend w-25">
-                                    <span class="input-group-text w-100">Weight(g)</span>
+                                    <span class="input-group-text w-100">Weight (g)</span>
                                 </div>
                                 <input type="number" step="0.01" min="0" class="form-control" id="weight"
                                     placeholder="Skein weight in grams">
@@ -43,10 +43,10 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend w-25">
-                                    <span class="input-group-text w-100">Length(cm)</span>
+                                    <span class="input-group-text w-100">Length (in)</span>
                                 </div>
                                 <input type="number" step="0.01" min="0" class="form-control" id="length"
-                                    placeholder="Skein length in cm">
+                                    placeholder="Skein length in inches">
                             </div>
                         </div>
                         <div class="form-group">
@@ -74,19 +74,19 @@
                     <div id="results" class="pt-4">
                         <h5>Results</h5>
                         <div class="form-group">
-                            <div class="input-group">
-                                <div class="input-group-prepend w-25">
-                                    <span class="input-group-text w-100">Grist(m/kg)</span>
+                                <div class="input-group">
+                                    <div class="input-group-prepend w-25">
+                                        <span class="input-group-text w-100">Grist (ypp)</span>
+                                    </div>
+                                    <input type="number" class="form-control" id="gristImperial">
                                 </div>
-                                <input type="number" class="form-control" id="gristMetric">
                             </div>
-                        </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend w-25">
-                                    <span class="input-group-text w-100">Grist(ypp)</span>
+                                    <span class="input-group-text w-100">Grist (m/kg)</span>
                                 </div>
-                                <input type="number" class="form-control" id="gristImperial">
+                                <input type="number" class="form-control" id="gristMetric">
                             </div>
                         </div>
                         <div class="form-group">
@@ -100,9 +100,9 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend w-25">
-                                    <span class="input-group-text w-100">Length(m)</span>
+                                    <span class="input-group-text w-100">Length (yds)</span>
                                 </div>
-                                <input type="number" class="form-control" id="totalLength">
+                                <input type="number" class="form-control" id="totalLengthYards">
                             </div>
                         </div>
                         <button class="btn btn-light float-right" id="reset-button">Reset</button>
@@ -110,14 +110,15 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <!-- BUY ME A COFFEE -->
+        <!-- <div class="row">
             <div class="col-md-6 mx-auto ">
                 <a class="float-right mt-4" href='https://ko-fi.com/S6S0WEGT' target='_blank'><img height='36'
                         style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi4.png?v=2'
                         border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
 
             </div>
-        </div>
+        </div> -->
     </div>
 
     </div>
