improve phone view

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <form action="" id="grist-form">
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend w-25">
-                                    <span class="input-group-text w-100">Weight (g)</span>
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Weight (g)</span>
                                 </div>
                                 <input type="number" step="0.01" min="0" class="form-control" id="weight"
                                     placeholder="Skein weight in grams">
@@ -42,8 +42,8 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend w-25">
-                                    <span class="input-group-text w-100">Length (in)</span>
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Length (in)</span>
                                 </div>
                                 <input type="number" step="0.01" min="0" class="form-control" id="length"
                                     placeholder="Skein length in inches">
@@ -51,8 +51,8 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend w-25">
-                                    <span class="input-group-text w-100">Wraps</span>
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Wraps</span>
                                 </div>
                                 <input type="number" step="0.01" min="0" class="form-control" id="wraps"
                                     placeholder="No. of strands in skein">
@@ -75,32 +75,32 @@
                         <h5>Results</h5>
                         <div class="form-group">
                                 <div class="input-group">
-                                    <div class="input-group-prepend w-25">
-                                        <span class="input-group-text w-100">Grist (ypp)</span>
+                                    <div class="input-group-prepend  ">
+                                        <span class="input-group-text ">Grist (ypp)</span>
                                     </div>
                                     <input type="number" class="form-control" id="gristImperial">
                                 </div>
                             </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend w-25">
-                                    <span class="input-group-text w-100">Grist (m/kg)</span>
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Grist (m/kg)</span>
                                 </div>
                                 <input type="number" class="form-control" id="gristMetric">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend w-25">
-                                    <span class="input-group-text w-100">Class</span>
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Class</span>
                                 </div>
                                 <input type="text" class="form-control" id="class">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-prepend w-25">
-                                    <span class="input-group-text w-100">Length (yds)</span>
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Length (yds)</span>
                                 </div>
                                 <input type="number" class="form-control" id="totalLengthYards">
                             </div>
