--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google verification -->
     <meta name="google-site-verification" content="bseRgW51DBq-tWcYhBU9IjtYUY6eKz6QGaxlrSiGfqw" />
     <title>Grist Calculator</title>
@@ -40,15 +42,9 @@
                                     placeholder="Skein weight in grams">
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <div class="input-group-prepend  ">
-                                    <span class="input-group-text ">Length (in)</span>
-                                </div>
-                                <input type="number" step="0.01" min="0" class="form-control" id="length"
-                                    placeholder="Skein length in inches">
-                            </div>
-                        </div>
+
+
+
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend  ">
@@ -56,6 +52,20 @@
                                 </div>
                                 <input type="number" step="0.01" min="0" class="form-control" id="wraps"
                                     placeholder="No. of strands in skein">
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Length (in)</span>
+                                </div>
+                                <input type="number" step="0.01" min="0" class="form-control" id="length"
+                                    placeholder="Skein length in inches">
+                                <div class="input-group-append">
+                                    <span data-toggle="tooltip" title="Half of one full wrap of your niddy noddy"
+                                        class="fa fa-info-circle input-group-text" aria-hidden="true"></span>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -74,13 +84,13 @@
                     <div id="results" class="pt-4">
                         <h5>Results</h5>
                         <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-prepend  ">
-                                        <span class="input-group-text ">Grist (ypp)</span>
-                                    </div>
-                                    <input type="number" class="form-control" id="gristImperial">
+                            <div class="input-group">
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Grist (ypp)</span>
                                 </div>
+                                <input type="number" class="form-control" id="gristImperial">
                             </div>
+                        </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend  ">
@@ -139,6 +149,11 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <script src="app.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
