--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                                     <span class="input-group-text ">Length (in)</span>
                                 </div>
                                 <input type="number" step="0.01" min="0" class="form-control" id="length"
-                                    placeholder="Skein length in inches">
+                                    placeholder="Skein length">
                                 <div class="input-group-append">
-                                    <span data-toggle="tooltip" title="Half of one full wrap of your niddy noddy"
+                                    <span data-toggle="tooltip" title="Half of one full wrap of your niddy noddy in inches"
                                         class="fa fa-info-circle input-group-text" aria-hidden="true"></span>
                                 </div>
                             </div>
