--- a/index.html
+++ b/index.html
@@ -32,27 +32,35 @@
 
                 <div class="card card-body text-center mt-5">
                     <h1 class="heading display-5 pb-3">Grist Calculator</h1>
-                    <form action="" id="grist-form">
+
+                    <div class="btn-group btn-group-toggle pb-3" data-toggle="buttons">
+                        <label class="btn btn-outline-secondary active" id="mixed-button">
+                            <input type="radio" name="options" autocomplete="off" checked> Mixed
+                        </label>
+
+                        <label class="btn btn-outline-secondary" id="metric-button">
+                            <input type="radio" name="options" autocomplete="off"> Metric
+                        </label>
+                    </div>
+
+                    <!-- Grist form mixed -->
+                    <form action="" id="grist-form-mixed">
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend  ">
                                     <span class="input-group-text ">Weight (g)</span>
                                 </div>
-                                <input type="number" step="0.01" min="0" class="form-control" id="weight"
+                                <input type="number" step="0.01" min="0" class="form-control" id="mixed-weight-g"
                                     placeholder="Skein weight in grams">
                             </div>
                         </div>
-
-
-
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend  ">
                                     <span class="input-group-text ">Wraps</span>
                                 </div>
-                                <input type="number" step="0.01" min="0" class="form-control" id="wraps"
+                                <input type="number" step="0.01" min="0" class="form-control" id="mixed-wraps"
                                     placeholder="No. of strands in skein">
-
                             </div>
                         </div>
                         <div class="form-group">
@@ -60,16 +68,58 @@
                                 <div class="input-group-prepend  ">
                                     <span class="input-group-text ">Length (in)</span>
                                 </div>
-                                <input type="number" step="0.01" min="0" class="form-control" id="length"
+                                <input type="number" step="0.01" min="0" class="form-control" id="mixed-length-inches"
                                     placeholder="Skein length">
                                 <div class="input-group-append">
-                                    <span data-toggle="tooltip" title="Half of one full wrap of your niddy noddy in inches"
+                                    <span data-toggle="tooltip"
+                                        title="Half of one full wrap of your niddy noddy in inches"
                                         class="fa fa-info-circle input-group-text" aria-hidden="true"></span>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Calculate" class="btn btn-dark btn-block">
+                            <input type="submit" value="Calculate" class="btn btn-dark btn-block" id="calculate-mixed">
+                        </div>
+                    </form>
+
+                    <!-- Grist form metric -->
+
+                    <form action="" id="grist-form-metric">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Weight (g)</span>
+                                </div>
+                                <input type="number" step="0.01" min="0" class="form-control" id="metric-weight-g"
+                                    placeholder="Skein weight in grams">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Wraps</span>
+                                </div>
+                                <input type="number" step="0.01" min="0" class="form-control" id="metric-wraps"
+                                    placeholder="No. of strands in skein">
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Length (cm)</span>
+                                </div>
+                                <input type="number" step="0.01" min="0" class="form-control" id="metric-length-cm"
+                                    placeholder="Skein length">
+                                <div class="input-group-append">
+                                    <span data-toggle="tooltip"
+                                        title="Half of one full wrap of your niddy noddy in centimeters"
+                                        class="fa fa-info-circle input-group-text" aria-hidden="true"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Calculate" class="btn btn-dark btn-block" id="calculate-metric">
                         </div>
                     </form>
 
@@ -102,19 +152,27 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend  ">
-                                    <span class="input-group-text ">Class</span>
-                                </div>
-                                <input type="text" class="form-control" id="class">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <div class="input-group-prepend  ">
                                     <span class="input-group-text ">Length (yds)</span>
                                 </div>
                                 <input type="number" class="form-control" id="totalLengthYards">
                             </div>
                         </div>
+                        <div class="form-group">
+                                <div class="input-group">
+                                    <div class="input-group-prepend  ">
+                                        <span class="input-group-text ">Length (m)</span>
+                                    </div>
+                                    <input type="number" class="form-control" id="totalLengthMeters">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend  ">
+                                            <span class="input-group-text ">Class</span>
+                                        </div>
+                                        <input type="text" class="form-control" id="class">
+                                    </div>
+                                </div>
                         <button class="btn btn-light float-right" id="reset-button">Reset</button>
                     </div>
                 </div>
