--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141182961-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141182961-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-141182961-1');
-</script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-141182961-1');
+    </script>
 
 
     <!-- Required meta tags -->
@@ -46,7 +49,7 @@
 
                     <div class="btn-group btn-group-toggle pb-3" data-toggle="buttons">
                         <label class="btn btn-outline-secondary active" id="mixed-button">
-                            <input type="radio" name="options" autocomplete="off"  checked> Mixed
+                            <input type="radio" name="options" autocomplete="off" checked> Mixed
                         </label>
 
                         <label class="btn btn-outline-secondary" id="metric-button">
@@ -169,21 +172,21 @@
                             </div>
                         </div>
                         <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-prepend  ">
-                                        <span class="input-group-text ">Length (m)</span>
-                                    </div>
-                                    <input type="number" class="form-control" id="totalLengthMeters">
+                            <div class="input-group">
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Length (m)</span>
                                 </div>
+                                <input type="number" class="form-control" id="totalLengthMeters">
                             </div>
-                            <div class="form-group">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend  ">
-                                            <span class="input-group-text ">Class</span>
-                                        </div>
-                                        <input type="text" class="form-control" id="class">
-                                    </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend  ">
+                                    <span class="input-group-text ">Class</span>
                                 </div>
+                                <input type="text" class="form-control" id="class">
+                            </div>
+                        </div>
                         <button class="btn btn-light float-right" id="reset-button">Reset</button>
                     </div>
                 </div>
